--- a/FirebaseLab/app/src/main/res/menu/menu_main.xml
+++ b/FirebaseLab/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_refresh_username"
+        android:orderInCategory="1"
+        android:title="Refresh Username"
+        android:icon="@android:drawable/stat_notify_sync_noanim"
+        app:showAsAction="ifRoom" />
 </menu>
